tests/fixtures/LatestTests/DynamicVariableTests/errors/dyn_str_to_int8.fg
/; EXPECT_ERROR: Runtime Error: Cannot cast Dynamic value to Int8.
vvar _str = "Hello"
println(Int8(_str))